[package]
name = "drop-abort"
description = "Abort the future when the handle is dropped."
license = "MIT"
version = "0.1.0"
authors = ["spacelin <spacelin@tencent.com>"]
edition = "2018"

[dependencies]
futures-util = { version = "0.3.5", default-features = false }

[dev-dependencies]
futures = { version = "0.3.5", default-features = false, features = ["executor"] }
